--- a/jakes-begin/index.html
+++ b/jakes-begin/index.html
@@ -25,7 +25,14 @@
                 <li><a href="text.html">Text Us</a></li>
                 <li><a href="order.html">Order Online</a></li>
         </nav>
+       <div class="nav-bkgd"></div>
     </header>
+    <section>
+        <picture>
+            <source srcset="media/images/jakes-eating-lg.jpg" media="(min-width: 992px">
+            <source srcset="media/images/jakes-eating-sm.jpg" media="(min-width: 768px">
+            <img src="media/images/jakes-eating-sm.jpg" alt="People eating dinner on a long table with lots of dishes."></picture>
+    </section>
     <article>
         <h2>Customer Recommendations</h2>
         <p>Our menu is full of delicious dishes and innovative offerings. Try out some of our customer favorites.</p>
